- updated README.md files - added missing README's - added Combinator pattern - added CallBackJavascriptEquivalent this also tests the nashorn javascript runner